# skein

./: .gitignore  CLAUDE.md  README.md  kg.yaml.example  pyproject.toml  skein.yaml.example
docs/: kg-overview.md  skein-overview.md
integration/: claude-md-snippet.md  install.py
integration/hooks/: kg-capture-commit.py  kg-capture-fix.py
integration/skills/kg-interviewer/: SKILL.md
src/project_kg/: __init__.py  __main__.py  config.py  db.py  embeddings.py  search.py  server.py
src/project_kg/connectors/: base.py  wcp.py
src/skein/: __init__.py  __main__.py  config.py  db.py  embeddings.py  models.py  search.py  server.py
src/skein/connectors/: base.py  wcp.py
